#158 layout fix: overlapping topic circles in document browser (cherry picked from commit aa3459b0e3def6c0063b75a2bb7f7fb210a82746)

--- a/webapp/src/main/webapp/css/style.css
+++ b/webapp/src/main/webapp/css/style.css
@@ -418,7 +418,7 @@ height: 200px;
 }
 
 .topicCircle, .topicCircleNotMove {
-	font-size: x-large;
+	font-size: 60%;
 	font-family: Helvetica, Arial, sans-serif;
 	cursor: pointer;
 	text-shadow: -0.5px 0 black, 0 0.5px black, 0.5px 0 black, 0 -0.5px black;
